# froeling-connect

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  example.py  pyproject.toml  setup.cfg
.github/workflows/: bump-version.yaml  bump-version.yml  ci.yaml  ci.yml  publish.yaml
src/froeling/: __init__.py  client.py  endpoints.py  exceptions.py  objects.py  session.py
src/froeling/datamodels/: __init__.py  component.py  facility.py  generics.py  notifications.py  userdata.py
src/froeling_connect.egg-info/: PKG-INFO
tests/: conftest.py  test_components.py  test_facility.py  test_login.py  test_notifications.py
tests/responses/: component.json  component_list.json  facility.json  facility_modified.json  login.json  login_bad_creds.json  notification.json  notification_count.json  notification_list.json  overview.json  user.json
