[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "froeling-connect"
version = "0.1.3"
description = "A python wrapper for the Fröling-Connect API"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
keywords = ["froeling", "fröling", "fröling-connect", "fröling connect"]
authors = [
  {name = "Layf"},
]

dependencies = [
  "aiohttp>=3",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
]

[project.urls]
homepage = "https://github.com/Layf21/froeling-connect"
GitHub = "https://github.com/Layf21/froeling-connect"
source = "https://github.com/Layf21/froeling-connect.git"
docs = "https://github.com/Layf21/froeling-connect/blob/master/README.md"
issues = "https://github.com/Layf21/froeling-connect/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/froeling"]
