[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "froeling-connect"
version = "0.1.3"
description = "A python wrapper for the Fröling-Connect API"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
keywords = ["froeling", "fröling", "fröling-connect", "fröling connect"]
authors = [
  {name = "Layf"},
]

dependencies = [
  "aiohttp>=3",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
]

[project.urls]
homepage = "https://github.com/Layf21/froeling-connect"
GitHub = "https://github.com/Layf21/froeling-connect"
source = "https://github.com/Layf21/froeling-connect.git"
docs = "https://github.com/Layf21/froeling-connect/blob/master/README.md"
issues = "https://github.com/Layf21/froeling-connect/issues"


[tool.hatch.build.targets.wheel]
packages = ["src/froeling"]

[tool.hatch.envs.dev]
dependencies = [
  "pre-commit",
  "mypy",
  "ruff",
  "pytest",
]


[tool.ruff]
lint.select = ["D", "E", "F", "N", "Q"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"
docstring-quotes = "double"
avoid-escape = true


[tool.mypy]
python_version = "3.10"
warn_unused_configs = true

disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true

strict_optional = true
warn_redundant_casts = true
allow_untyped_globals = false
